# line_segment_extraction

./: CMakeLists.txt  package.xml
config/: vkistbot_control.yaml
launch/: gmapping.launch  vkistbot_controller.launch  vkistbot_floor.launch  vkistbot_gazebo.launch
meshes/: lidar1_link.STL  lidar2_link.STL  lidar3_link.STL  simulation_enviroment.STL  wheel1_link.STL  wheel2_link.STL  wheel3_link.STL
src/: line_extraction.cpp  omnidrive_velocity_controller.cpp  pso_ndt_slam.cpp  test.cpp
urdf/: simulation_enviroment.csv  simulation_enviroment.urdf  vkistbot.csv  vkistbot.urdf
worlds/: myworld.world  simulation_world.world
